# finding-memeland-agent

./: .env.example  .gitignore  LICENSE  README.md  doppler.md  pyproject.toml  requirements.txt
db/: schema.sql
scripts/: check_findability.py  check_genesis_config.py  generate_clues_sample.py  generate_persona_sample.py  simulate_hunt.py  spike_x_v2.py  test_payout.py
src/finding_memeland/: __init__.py  config.py  economics.py  live_test.py  main.py  preflight.py  runtime.py
src/finding_memeland/chain/: holdings.py  payout.py
src/finding_memeland/content/: clue_engine.py  filler.py  guardrails.py  integrity.py  templates.py
src/finding_memeland/db/: client.py
src/finding_memeland/dm/: listener.py  validator.py
src/finding_memeland/orchestrator/: ports.py  simulation.py  state_machine.py
src/finding_memeland/persona/: avatar.py  dresser.py  generator.py  source.py
src/finding_memeland/social/: x_client.py
src/finding_memeland/supervisor/: watchdog.py
tests/: test_approval.py  test_avatar.py  test_clue_cadence.py  test_clue_easing.py  test_clue_engine.py  test_clue_guardrails.py  test_clue_vectors.py  test_dresser.py  test_economics.py  test_filler.py  test_guardrails.py  test_heartbeat.py  test_holdings.py  test_hunt_numbering.py  test_hunt_pause.py  test_integrity.py  test_launch_guard.py  test_orchestrator.py  test_payout.py  test_persona_parse.py  test_persona_variety.py  test_preflight_gate.py  test_runtime_adapters.py  test_state_machine.py  test_templates.py  test_validator_parse.py  test_x_client_dms.py  test_x_client_timeout.py
(+1 files in other folders)
